--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --secondary-color: yellow;
     --text-dark: black;
     --text-light: lightgray;
-    --extra--color: darkviolet;
+    --extra--color: maroon;
     --max-width: 1200px;
 }
 *{
