--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --primary-color: lightgreen;
     --primary-color-dark: green;
     --secondary-color: yellow;
@@ -7,25 +7,43 @@
     --extra--color: olive;
     --max-width: 1200px;
 }
-*{
+
+* {
+
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Truculenta", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    font-variation-settings:
+        "width" 100;
 }
-a{
+
+a {
     text-decoration: none;
 }
-body{
+
+body {
     font-family: sans-serif;
+    background-image: url(IT-Dept.gif);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-nav{
+
+nav {
     width: 100%;
     top: 0;
     left: 0;
     background-color: white;
+    position: fixed;
     z-index: 99;
 }
-.nav-content{
+
+.nav-content {
     max-width: var(--max-width);
     margin: auto;
     padding: 1.5em 1rem;
@@ -33,27 +51,35 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
-nav .logo a{
-   font-size: 1.5em;
-   font-weight: 600;
-   color: var(--primary-color);
-   transition: .3s;
+
+nav .logo a {
+    margin-left: 10px;
+    font-size: 1.5em;
+    font-weight: 600;
+    color: var(--primary-color);
+    transition: .3s;
 }
-nav .logo a:hover{
-    color: var(--primary-color-dark)
+
+nav .logo span{
+    color: #f33;
 }
-nav .checkbox{
+
+nav .checkbox {
     display: none;
 }
-nav input{
+
+nav input {
     display: none;
 }
-nav .checkbox i{
+
+nav .checkbox i {
+    margin-left: -460px;
     font-size: 2rem;
     color: var(--primary-color);
     cursor: pointer;
 }
-ul{
+
+ul {
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -61,7 +87,7 @@ ul{
     transition: left 0.3s;
 }
 
-ul li a{
+ul li a {
     padding: 0.5rem 1rem;
     border: 2px solid transparent;
     text-decoration: none;
@@ -69,16 +95,17 @@ ul li a{
     color: var(--text-dark);
     transition: 0.3s;
 }
-ul li a:hover{
-    background-color: var(--secondary-color); 
+
+ul li a:hover {
+    background-color: var(--secondary-color);
     border-radius: 20px;
 }
 
-.section{
-  background-color: var(--extra--color);
+.section {
+    background-image: var(--primary-color);
 }
 
-.section-container{
+.section-container {
     min-height: 100vh;
     max-width: var(--max-width);
     margin: auto;
@@ -88,18 +115,20 @@ ul li a:hover{
     gap: 4rem;
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.subtitle{
+.subtitle {
     letter-spacing: 2px;
     color: var(--text-light);
+    text-shadow: 1px 4px 3px black;
 }
 
-.title{
+.title {
+    text-shadow: 1px 4px 3px blue;
     font-size: 2.5rem;
     font-weight: 400;
     line-height: 3rem;
@@ -107,23 +136,18 @@ ul li a:hover{
     margin-bottom: 1rem;
 }
 
-.title span{
+.subtitle span {
     font-weight: 600;
+    color: blue;
+    text-shadow: 1px 4px 3px black;
 }
 
-.description{
-    line-height: 1.5rem;
-    color: var(--text-light);
-
-    margin-bottom: 2rem;
-}
-
-.action-btn{
+.action-btn {
     display: flex;
     gap: 1rem;
 }
 
-.action-btn button{
+.action-btn button {
     font-size: 1rem;
     font-weight: 600;
     letter-spacing: 2px;
@@ -135,74 +159,237 @@ ul li a:hover{
     cursor: pointer;
 }
 
-.button1{
+.button1 a{
+    color: white;
+}
+
+.button1 {
     background-color: var(--primary-color);
     color: #ffffff;
 }
 
-.button1:hover{
+.button1:hover {
     background-color: var(--primary-color-dark);
 }
 
-.button2{
-    background-color: var(--primary-color);
-    color: #ffffff;
-}
-
-.button2:hover{
-    background-color: var(--primary-color-dark);
-}
-
-.image{
+.image {
     color: var(--primary-color);
 }
 
-.image{
+.image {
     display: grid;
     place-items: center;
 }
 
-.image img{
+.image img {
     width: min(25rem, 90%);
     border-radius: 100%;
 }
 
 @media (width < 750px) {
-    nav .checkbox{
+    nav .logo a {
+        margin-left: 170px;
+        font-size: 1.5em;
+        font-weight: 600;
+    }
+
+    nav .checkbox {
         display: block;
     }
 
-    ul{
-       position: absolute;
-       width: 100%;
-       height: calc(100vh - 85px);
-       left: -100%;
-       top: 85px;
-       background-color: var(--extra--color);
-       flex-direction: column;
-       justify-content: center;
-       gap: 3rem;
+    ul {
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 85px);
+        left: -100%;
+        top: 85px;
+        background-color: var(--extra--color);
+        flex-direction: column;
+        justify-content: center;
+        gap: 3rem;
     }
 
-    nav #check:checked ~ ul{
+    nav #check:checked~ul {
         left: 0;
     }
 
-    ul li a{
+    ul li a {
         font-size: 1.25rem;
     }
 
-    .section-container{
+    .section-container {
         padding: 10rem 1rem 5rem 1rem;
         text-align: center;
         grid-template-columns: repeat(1, 1fr);
     }
 
-    .image{
+    .image {
         grid-area: 1/1/2/2;
     }
 
-    .action-btn{
+    .image img{
+        width: 70%;
+    }
+
+    .action-btn {
         margin: auto;
+    }
+}
+
+/*---About---*/
+
+#row{
+    width: 100%;
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
+.row{
+   width: 80%;
+   max-width: 1170px;
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   grid-gap: 50px 30px;    
+}
+
+.row .left{
+    overflow: hidden;
+}
+
+.row .left img{
+    width: 80%;
+    border-radius: 100%;
+    padding: 60px;
+}
+
+.row .right{
+    display: flex;
+    align-items: center;
+}
+
+.row .right .content{
+    padding-left: 20px;
+}
+
+.row .right .content p{
+    font-size: 36px;
+    line-height: 50px; 
+}
+
+.content p span{
+    text-shadow: 1px 3px 4px black;
+    color: #f33;
+} 
+
+.title2{
+    text-shadow: 1px 3px 4px blue;
+    color: black;
+    margin-bottom: 20px;
+}
+
+/*-- For Mobile --*/
+
+@media (max-width: 768px) {
+    .row{
+        width: 80%;
+        grid-template-columns: 1fr; 
+     }   
+
+     .row .left{
+        overflow: hidden;
+    }
+
+     .row .left img{
+        display: block;
+        margin: auto;
+        width: 70%;
+        border-radius: 100%;
+    }
+    .title2{
+        text-align: center;
+    }
+}
+
+/*--Contact--*/
+
+.contact{
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+}
+
+.message{
+    font-size: 36px;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.subtitle2{
+    text-align: center;
+}
+
+form{
+    margin-top: 20px;
+}
+
+.links{
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: column;
+    margin-top: 20px;
+    margin-left: 20px;
+    transition: .3s;
+}
+
+
+.links a{
+    color: black;
+}
+
+.links a:hover{
+    transform: scale(1.5);
+}
+
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+    width: 100%;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+button .but{
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: none;
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: .3s;
+}
+
+button:hover {
+    background-color: var(--primary-color-dark);
+}
+@media only screen and (min-width: 600px) {
+    input[type="text"],
+    input[type="email"],
+    select,
+    textarea {
+        width: 48%;
+        display: inline-block;
+        margin-right: 10px;
+    }
+
+    select {
+        margin-right: 0; 
     }
 }
