--- a/style.css
+++ b/style.css
@@ -123,22 +123,22 @@ ul li a:hover {
 .subtitle {
     letter-spacing: 2px;
     color: var(--text-light);
-    text-shadow: 1px 4px 3px black;
+    text-shadow: 1px 4px 15px gray;
 }
 
 .title {
-    text-shadow: 1px 4px 3px blue;
+    text-shadow: 1px 4px 15px gray;
     font-size: 2.5rem;
     font-weight: 400;
     line-height: 3rem;
-    color: var(--text-dark);
+    color: greenyellow;
     margin-bottom: 1rem;
 }
 
 .subtitle span {
     font-weight: 600;
     color: blue;
-    text-shadow: 1px 4px 3px black;
+    text-shadow: 1px 4px 15px rgb(60, 195, 145);
 }
 
 .action-btn {
@@ -163,6 +163,7 @@ ul li a:hover {
 }
 
 .button1 {
+    margin-top: 20px;
     background-color: var(--primary-color);
     color: #ffffff;
 }
@@ -181,8 +182,18 @@ ul li a:hover {
 }
 
 .image img {
+    box-shadow: 1px 3px 15px gray;
     width: min(25rem, 90%);
     border-radius: 100%;
+    transition: .6s;
+    filter: grayscale(100%);
+}
+
+.image img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    filter: grayscale(0%);
+    box-shadow: 1px 3px 15px blue;
 }
 
 @media (width < 750px) {
@@ -256,9 +267,18 @@ ul li a:hover {
 }
 
 .row .left img{
-    width: 80%;
+    box-shadow: 1px 3px 15px gray;
+    width: 65%;
     border-radius: 100%;
-    padding: 60px;
+    transition: .6s;
+    filter: grayscale(100%);
+}
+
+.row .left img:hover{
+    box-shadow: 1px 3px 15px blue;
+    cursor: pointer;
+    transform: scale(1.1);
+    filter: grayscale(0%);
 }
 
 .row .right{
@@ -271,19 +291,24 @@ ul li a:hover {
 }
 
 .row .right .content p{
-    font-size: 36px;
-    line-height: 50px; 
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    line-height: 30px; 
+    text-shadow: 1px 3px 15px violet;
 }
 
 .content p span{
-    text-shadow: 1px 3px 4px black;
+    text-shadow: 1px 3px 15px gray;
     color: #f33;
 } 
 
-.title2{
-    text-shadow: 1px 3px 4px blue;
-    color: black;
-    margin-bottom: 20px;
+.title2 {
+    text-shadow: 1px 3px 4px gray;
+    color: greenyellow;
+    font-size: 5rem;
+    margin: 0px 20px;
+    margin-bottom: 1rem;
 }
 
 /*-- For Mobile --*/
@@ -301,12 +326,28 @@ ul li a:hover {
      .row .left img{
         display: block;
         margin: auto;
-        width: 70%;
+        width: 90%;
         border-radius: 100%;
     }
     .title2{
+        margin-top: -730px;
         text-align: center;
     }
+    .row .right .content p{
+        margin-top: 540px;
+        text-align: center;
+        font-size: 30px;
+        line-height: 30px; 
+        text-shadow: 1px 3px 3px gray;
+    }
+}
+
+@media (max-width: 580px) {
+    .title2{
+        margin-top: -580px;
+        text-align: center;
+    }
+    
 }
 
 /*--Contact--*/
@@ -319,6 +360,7 @@ ul li a:hover {
 
 .message{
     font-size: 36px;
+    padding-top: 200px;
     margin-bottom: 1rem;
     text-align: center;
 }
@@ -332,22 +374,41 @@ form{
 }
 
 .links{
-    font-size: 20px;
+    text-shadow: 1px 3px 15px silver;
+    font-size: 70px;
     display: flex;
     align-items: center;
-    justify-content: column;
+    justify-content: space-evenly;
     margin-top: 20px;
     margin-left: 20px;
-    transition: .3s;
 }
 
 
 .links a{
     color: black;
+    transition: 1s;
 }
 
 .links a:hover{
     transform: scale(1.5);
+}
+
+.fb{
+    line-height: 1rem;
+    text-align: center;
+    font-size: 20px;
+}
+
+.git{
+    line-height: 1rem;
+    text-align: center;
+    font-size: 20px;
+}
+
+.tik{
+    line-height: 1rem;
+    text-align: center;
+    font-size: 20px;
 }
 
 input[type="text"],
@@ -362,7 +423,7 @@ textarea {
     border-radius: 4px;
 }
 
-button .but{
+button, .but{
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
