--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: lightgreen;
     --primary-color-dark: green;
-    --secondary-color: yellow;
+    --secondary-color: lime;
     --text-dark: black;
     --text-light: lightgray;
     --extra--color: olive;
@@ -96,9 +96,11 @@ ul li a {
 }
 
 ul li a:hover {
+    border: 2px solid;
     background-color: var(--secondary-color);
     border-radius: 20px;
 }
+
 
 .section {
     background-image: var(--primary-color);
@@ -267,6 +269,7 @@ ul li a:hover {
 }
 
 .row .left img{
+    border: 2px solid;
     box-shadow: 1px 3px 15px gray;
     width: 65%;
     border-radius: 100%;
@@ -371,7 +374,6 @@ form{
     margin-left: 20px;
 }
 
-
 .links a{
     color: black;
     transition: 1s;
@@ -439,4 +441,44 @@ button:hover {
     select {
         margin-right: 0; 
     }
+}
+/*--Skills--*/
+.skills1{
+    text-shadow: 1px 3px 15px silver;
+    font-size: 70px;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.skills1 img{
+    margin: auto;
+    padding: 1rem 1rem;
+    transition: .5s;
+}
+
+.skills1 img:hover{
+   transform: scale(1.3);
+}
+
+.html{
+    margin-top: -1.5rem;
+    padding: 1rem;
+    color: orange;
+    line-height: 1rem;
+    font-size: 20px;   
+    top: 20px;
+}
+
+.css{
+    margin-top: -1.5rem;
+    padding: 1rem;
+    line-height: 1rem;
+    font-size: 20px;
+    top: 20px;
+}
+
+.text h1{
+    text-align: center;
 }
