--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ ul li a:hover {
 }
 
 .row .left img{
-    border: 2px solid;
+    margin: 4rem;
     box-shadow: 1px 3px 15px gray;
     width: 65%;
     border-radius: 100%;
@@ -297,6 +297,8 @@ ul li a:hover {
     color: white;
     text-align: center;
     font-size: 30px;
+    left: 200px;
+    position: relative;
     line-height: 30px; 
     text-shadow: 1px 3px 15px violet;
 }
@@ -310,6 +312,8 @@ ul li a:hover {
     text-shadow: 1px 3px 4px gray;
     color: greenyellow;
     font-size: 5rem;
+    left: 200px;
+    position: relative;
     margin: 0px 20px;
     margin-bottom: 1rem;
 }
@@ -336,8 +340,14 @@ ul li a:hover {
         margin-left: -20px;
         text-align: center;
         font-size: 20px;
+        left: 0px;
+        position: relative;
         line-height: 25px; 
         text-shadow: 1px 3px 3px gray;
+    }
+    .title2{
+        left: 0px;
+        position: relative;
     }
 }
 
